add installation of dependencies into binder

--- a/radiolab_stochasticity/radiolab_stochasticity.ipynb
+++ b/radiolab_stochasticity/radiolab_stochasticity.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "## Randomnes\n",
     "\n",
-    "In the episode, they present an experiment of flipping a coin one hundred times and recording the outcome on a board. One group actually fips the coin and writes the actual results down, the other group makes up the results and writes down those results. Afterwards, the examiner walks in to evaluate the results and immediately points out which one is the true random sequence. The way she discovered it is by looking at the longest streaks. The true random group had a much longer streak - a seven in a row - than the group that made the results up.\n",
+    "In the episode, they present an experiment of flipping a coin one hundred times and recording the outcome on a board. One group actually flips the coin and writes the actual results down, the other group makes up the results and writes down those results. Afterwards, the examiner walks in to evaluate the results and immediately points out which one is the true random sequence. The way she discovered it is by looking at the longest streaks. The true random group had a much longer streak - a seven in a row - than the group that made the results up.\n",
     "\n",
     "The probability to get seven tails in a row can be calculated as\n",
     "\n",
@@ -64,6 +64,17 @@
     "## Flipping coins in python\n",
     "\n",
     "Let's do a simulation of this experiment in python. We are going to simulate `nmc` times `nflips` coin flips in a row and count how many times we get at least one seven in a row. Dividing the total count by `nmc` should then give us the same result as we have determined in the calculation above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "669e46fb-9c7e-427c-82a2-b2e161c79a9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# install dependencies\n",
+    "%pip install numba numpy"
    ]
   },
   {
