--- a/radiolab_stochasticity/radiolab_stochasticity.ipynb
+++ b/radiolab_stochasticity/radiolab_stochasticity.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "One of my favorite radio shows is [Radiolab](https://radiolab.org/), which always presents the listener with an interesting scientific question from across the board. In a recent rerun, Radiolab discussed [Stochasticity](https://radiolab.org/podcast/91684-stochasticity/transcript). Something struck me as odd, so I decided to do some math and figure out what was going on. And of course, what is simply math without thinking about how to also do this in python!\n",
     "\n",
-    "## Randomnes\n",
+    "## Randomness\n",
     "\n",
     "In the episode, they present an experiment of flipping a coin one hundred times and recording the outcome on a board. One group actually flips the coin and writes the actual results down, the other group makes up the results and writes down those results. Afterwards, the examiner walks in to evaluate the results and immediately points out which one is the true random sequence. The way she discovered it is by looking at the longest streaks. The true random group had a much longer streak - a seven in a row - than the group that made the results up.\n",
     "\n",
